[gd_scene load_steps=6 format=3 uid="uid://dp10q8eg5v3tp"]

[ext_resource type="Script" path="res://tools/node_debug/VehicleBody3D/DebugVehicleBody3D.gd" id="1_i0762"]

[sub_resource type="LabelSettings" id="LabelSettings_dny3b"]
font_size = 26
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_vluhy"]
font_size = 26
font_color = Color(1, 1, 0, 1)
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_slah3"]
font_size = 22
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2gha1"]
font_size = 22
font_color = Color(1, 1, 0, 1)
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="DebugVehicleBody3D" type="Panel"]
custom_minimum_size = Vector2(350, 450)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -380.0
offset_top = 20.0
offset_right = -30.0
offset_bottom = 457.0
grow_horizontal = 0
script = ExtResource("1_i0762")

[node name="Content" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -155.5
offset_top = 19.5
offset_right = 155.5
offset_bottom = 412.5
grow_horizontal = 2
theme_override_constants/separation = 15

[node name="Title" type="HBoxContainer" parent="Content"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="Label" type="Label" parent="Content/Title"]
layout_mode = 2
text = "VehicleBody3D"
label_settings = SubResource("LabelSettings_dny3b")

[node name="Value" type="Label" parent="Content/Title"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "VehicleBody3D"
label_settings = SubResource("LabelSettings_vluhy")
clip_text = true

[node name="Motion" type="VBoxContainer" parent="Content"]
layout_mode = 2

[node name="Label" type="Label" parent="Content/Motion"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Motion
"
label_settings = SubResource("LabelSettings_vluhy")
vertical_alignment = 2

[node name="EngineForce" type="HBoxContainer" parent="Content/Motion"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="Label" type="Label" parent="Content/Motion/EngineForce"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "Engine Force"
label_settings = SubResource("LabelSettings_slah3")
vertical_alignment = 1

[node name="Value" type="Label" parent="Content/Motion/EngineForce"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "123456.78"
label_settings = SubResource("LabelSettings_2gha1")
vertical_alignment = 1
clip_text = true

[node name="Brake" type="HBoxContainer" parent="Content/Motion"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="Label" type="Label" parent="Content/Motion/Brake"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_vertical = 1
text = "Brake"
label_settings = SubResource("LabelSettings_slah3")
vertical_alignment = 1

[node name="Value" type="Label" parent="Content/Motion/Brake"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "123456.78"
label_settings = SubResource("LabelSettings_2gha1")
vertical_alignment = 1
clip_text = true

[node name="Steering" type="HBoxContainer" parent="Content/Motion"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="Label" type="Label" parent="Content/Motion/Steering"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "Steering
"
label_settings = SubResource("LabelSettings_slah3")
vertical_alignment = 1

[node name="Value" type="Label" parent="Content/Motion/Steering"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "123456.78"
label_settings = SubResource("LabelSettings_2gha1")
vertical_alignment = 1
clip_text = true

[node name="RigidBody3D" type="VBoxContainer" parent="Content"]
layout_mode = 2

[node name="Label" type="Label" parent="Content/RigidBody3D"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "RigidBody3D"
label_settings = SubResource("LabelSettings_vluhy")
vertical_alignment = 2

[node name="Mass" type="HBoxContainer" parent="Content/RigidBody3D"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2

[node name="Label" type="Label" parent="Content/RigidBody3D/Mass"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "Mass"
label_settings = SubResource("LabelSettings_slah3")
vertical_alignment = 1

[node name="Values" type="VBoxContainer" parent="Content/RigidBody3D/Mass"]
layout_mode = 2

[node name="Value" type="Label" parent="Content/RigidBody3D/Mass/Values"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "123456.78"
label_settings = SubResource("LabelSettings_2gha1")
clip_text = true

[node name="HSlider" type="HSlider" parent="Content/RigidBody3D/Mass/Values"]
layout_mode = 2
min_value = 0.01
max_value = 1000.0
step = 0.05
value = 0.01

[node name="CenterOfMass" type="HBoxContainer" parent="Content/RigidBody3D"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2

[node name="Label" type="Label" parent="Content/RigidBody3D/CenterOfMass"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "CenterMassY
"
label_settings = SubResource("LabelSettings_slah3")
vertical_alignment = 1

[node name="Values" type="VBoxContainer" parent="Content/RigidBody3D/CenterOfMass"]
layout_mode = 2

[node name="Value" type="Label" parent="Content/RigidBody3D/CenterOfMass/Values"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "123456.78"
label_settings = SubResource("LabelSettings_2gha1")
clip_text = true

[node name="HSlider" type="HSlider" parent="Content/RigidBody3D/CenterOfMass/Values"]
layout_mode = 2
max_value = 1.0
step = 0.05

[connection signal="value_changed" from="Content/RigidBody3D/Mass/Values/HSlider" to="." method="_on_mass_slider_value_changed"]
[connection signal="value_changed" from="Content/RigidBody3D/CenterOfMass/Values/HSlider" to="." method="_on_center_of_mass_slider_value_changed"]
